--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-  <title>Admin Panel</title>
+  <title>WavePilots</title>
 
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/logo-wavepilots.png">
 
   
   <!-- Bootstrap core CSS     -->
