--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="icon" type="image/x-icon" href="assets/img/logo-wavepilots.png">
 
   
